# CASCADE-extensions

./: .gitignore  README.md
CSharpTool/: CSharpTool.csproj  CSharpTool.sln  Program.cs  README.md  Utils.cs
CSharpTool/Extractor/: CodeExtractor.cs  Context.cs  Extractor.cs  TestExtractor.cs
CSharpTool/Modifier/: Modifier.cs
CSharpTool/Verifier/: Verifier.cs
dataset/: README.md  README.txt
dataset/csharp/AngleSharp/AngleSharp/2c2e0fa70f149faa91a85d0d5a08a50b74f7046f/1/: analyzed.json  code_generator_current.json  log.txt
dataset/csharp/AngleSharp/AngleSharp/2c2e0fa70f149faa91a85d0d5a08a50b74f7046f/2/: analyzed.json  code_generator_current.json  log.txt  visualized.txt
dataset/csharp/AngleSharp/AngleSharp/2c2e0fa70f149faa91a85d0d5a08a50b74f7046f/3/: analyzed.json  code_generator_current.json  log.txt  visualized.txt
dataset/csharp/AngleSharp/AngleSharp/2c2e0fa70f149faa91a85d0d5a08a50b74f7046f/4/: analyzed.json  code_generator_current.json  log.txt
dataset/csharp/AngleSharp/AngleSharp/2c2e0fa70f149faa91a85d0d5a08a50b74f7046f/repository/: AngleSharp.7z
dataset/csharp/EPPlusSoftware/EPPlus/93dcadbbbbfb4e7900e4d1401fbce723246380ec/1/: analyzed.json  code_generator_current.json  log.txt  visualized.txt
dataset/csharp/EPPlusSoftware/EPPlus/93dcadbbbbfb4e7900e4d1401fbce723246380ec/2/: analyzed.json  code_generator_current.json  log.txt
rust-tool/: Cargo.toml  README.md
rust-tool/src/: code_extractor.rs  contexts.rs  extractor.rs  main.rs  modifier.rs  test_extractor.rs  utils.rs  verifier.rs
(+120 files in other folders)
